--- a/application/layout/menu.phtml
+++ b/application/layout/menu.phtml
@@ -26,7 +26,7 @@
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="#"><?= _('Профиль') ?></a></li>
                         <li class="divider"></li>
-                        <li><a class="spc-warning-link" data-message="Выйти из системы" data-description="<?= _('Вы уверены что хоите выйти?') ?>" href="/logout"><?= _('Выйти') ?></a></li>
+                        <li><a class="spc-warning-link" data-message="<?= _('Выйти из системы') ?>" data-description="<?= _('Вы уверены что хоите выйти?') ?>" href="/logout"><?= _('Выйти') ?></a></li>
                     </ul>
                 </li>
             </ul>
