added example with Twig

--- a/application/layout/menu.phtml
+++ b/application/layout/menu.phtml
@@ -19,6 +19,7 @@
                 <li class="<?= $route == '/order/example2' ? 'active' : '' ?>"><a href="/order/example2"><?= _('Пример') ?></a></li>
                 <li class="<?= $route == '/other' ? 'active' : '' ?>"><a href="/other"><?= _('Что-то ещё') ?></a></li>
                 <li class="<?= $route == '/other2' ? 'active' : '' ?>"><a href="/other2"><?= _('Будет 404') ?></a></li>
+                <li class="<?= $route == '/order/twig' ? 'active' : '' ?>"><a href="/order/twig"><?= _('Пример с Twig') ?></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
